fixtures/cs-rng-01/bad/optional-chaining-math-random.ts
export function generateToken() {
	return Math?.random();
}
